# atom-clang

./: .eslintrc  .gitignore  LICENSE.md  README.md  package.json
keymaps/: atom-clang-gen.cson  atom-clang.json
lib/: atom-clang-gen-view.coffee  atom-clang-gen.coffee  atom-clang.js  clang-ffi.js  clang-index.js  clang-translation-unit.js  completer.js  linter.js  log.js  main.js
libclang-test/: CMakeLists.txt  clang_ffi.js  fib.cpp  package.json  test_clang.cpp
libclang-test/tests/: missing_std.cpp
menus/: atom-clang-gen.cson  atom-clang.json
spec/: atom-clang-gen-spec.coffee  atom-clang-gen-view-spec.coffee  clang-ffi-spec.js  clang-index-spec.js
spec/input/: hello.cpp
styles/: atom-clang-gen.less
